[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/ui/ButtonQuit.gd" type="Script" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/GroundLayerSet.tres" type="TileSet" id=3]
[ext_resource path="res://assets/sounds/bgm.mp3" type="AudioStream" id=4]
[ext_resource path="res://scenes/ui/ButtonStart.gd" type="Script" id=5]
[ext_resource path="res://scenes/ui/SoundOptionsMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/BackgroundLayerSet.tres" type="TileSet" id=7]
[ext_resource path="res://assets/ui/titletext.png" type="Texture" id=8]
[ext_resource path="res://assets/buildings/windmill.png" type="Texture" id=9]
[ext_resource path="res://assets/buildings/barn.png" type="Texture" id=10]
[ext_resource path="res://scenes/ui/MainMenuBackgroundGenerator.gd" type="Script" id=11]
[ext_resource path="res://assets/ForegroundLayerSet.tres" type="TileSet" id=12]
[ext_resource path="res://scenes/screens/Screen.tscn" type="PackedScene" id=13]

[sub_resource type="TileSet" id=2]
0/name = "barn-0"
0/texture = ExtResource( 10 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 34, 48 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
2/name = "barn-1"
2/texture = ExtResource( 10 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 34, 0, 34, 48 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "barn-2"
3/texture = ExtResource( 10 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 68, 0, 34, 48 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "barn-3"
4/texture = ExtResource( 10 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 102, 0, 34, 48 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "barn-4"
5/texture = ExtResource( 10 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 136, 0, 34, 48 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "barn-5"
6/texture = ExtResource( 10 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 170, 0, 34, 48 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "barn-6"
7/texture = ExtResource( 10 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 204, 0, 34, 48 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "barn-7"
8/texture = ExtResource( 10 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 238, 0, 34, 48 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "windmill-0"
9/texture = ExtResource( 9 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 32, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "windmill-1"
10/texture = ExtResource( 9 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 32, 0, 32, 64 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "windmill-2"
11/texture = ExtResource( 9 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 64, 0, 32, 64 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "windmill-3"
12/texture = ExtResource( 9 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 96, 0, 32, 64 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0

[sub_resource type="Animation" id=3]
resource_name = "Barnimation"
length = 4.0
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ 0 ],
"method": "_set_barn_frame"
}, {
"args": [ 1 ],
"method": "_set_barn_frame"
}, {
"args": [ 2 ],
"method": "_set_barn_frame"
}, {
"args": [ 3 ],
"method": "_set_barn_frame"
}, {
"args": [ 4 ],
"method": "_set_barn_frame"
}, {
"args": [ 5 ],
"method": "_set_barn_frame"
}, {
"args": [ 6 ],
"method": "_set_barn_frame"
}, {
"args": [ 7 ],
"method": "_set_barn_frame"
}, {
"args": [ 0 ],
"method": "_set_barn_frame"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:barn_frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Rotate"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [ 0 ],
"method": "_set_windmill_frame"
}, {
"args": [ 1 ],
"method": "_set_windmill_frame"
}, {
"args": [ 2 ],
"method": "_set_windmill_frame"
}, {
"args": [ 3 ],
"method": "_set_windmill_frame"
} ]
}

[node name="ScreenMainMenu" instance=ExtResource( 13 )]

[node name="ViewportContainer" type="ViewportContainer" parent="." index="0"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 11 )

[node name="BackgroundTileMap" type="TileMap" parent="ViewportContainer" index="0"]
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 1, 1, 0, 0, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 0, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 0, 14, 0, 0, 15, 0, 1, 16, 0, 1, 17, 0, 1, 18, 0, 1, 19, 0, 1, 65536, 0, 1, 65537, 0, 0, 65538, 0, 1, 65539, 0, 1, 65540, 0, 1, 65541, 0, 0, 65542, 0, 1, 65543, 0, 1, 65544, 0, 0, 65545, 0, 1, 65546, 0, 1, 65547, 0, 1, 65548, 0, 0, 65549, 0, 1, 65550, 0, 1, 65551, 0, 1, 65552, 0, 1, 65553, 0, 1, 65554, 0, 0, 65555, 0, 1, 131072, 0, 1, 131073, 0, 1, 131074, 0, 1, 131075, 0, 1, 131076, 0, 1, 131077, 0, 1, 131078, 0, 1, 131079, 0, 1, 131080, 0, 0, 131081, 0, 0, 131082, 0, 1, 131083, 0, 1, 131084, 0, 1, 131085, 0, 1, 131086, 0, 1, 131087, 0, 1, 131088, 0, 1, 131089, 0, 1, 131090, 0, 1, 131091, 0, 1, 196608, 0, 1, 196609, 0, 1, 196610, 0, 1, 196611, 0, 1, 196612, 0, 0, 196613, 0, 1, 196614, 0, 1, 196615, 0, 1, 196616, 0, 1, 196617, 0, 1, 196618, 0, 1, 196619, 0, 1, 196620, 0, 1, 196621, 0, 1, 196622, 0, 1, 196623, 0, 1, 196624, 0, 1, 196625, 0, 1, 196626, 0, 1, 196627, 0, 1, 262144, 0, 1, 262145, 0, 1, 262146, 0, 1, 262147, 0, 1, 262148, 0, 1, 262149, 0, 1, 262150, 0, 1, 262151, 0, 1, 262152, 0, 1, 262153, 0, 1, 262154, 0, 0, 262155, 0, 0, 262156, 0, 1, 262157, 0, 1, 262158, 0, 1, 262159, 0, 1, 262160, 0, 1, 262161, 0, 1, 262162, 0, 1, 262163, 0, 1, 327680, 0, 0, 327681, 0, 0, 327682, 0, 1, 327683, 0, 0, 327684, 0, 0, 327685, 0, 1, 327686, 0, 1, 327687, 0, 0, 327688, 0, 0, 327689, 0, 1, 327690, 0, 0, 327691, 0, 1, 327692, 0, 1, 327693, 0, 1, 327694, 0, 1, 327695, 0, 1, 327696, 0, 1, 327697, 0, 1, 327698, 0, 0, 327699, 0, 0, 393216, 0, 0, 393217, 0, 1, 393218, 0, 1, 393219, 0, 1, 393220, 0, 1, 393221, 0, 1, 393222, 0, 1, 393223, 0, 1, 393224, 0, 1, 393225, 0, 1, 393226, 0, 1, 393227, 0, 1, 393228, 0, 1, 393229, 0, 1, 393230, 0, 1, 393231, 0, 1, 393232, 0, 1, 393233, 0, 1, 393234, 0, 1, 393235, 0, 1, 458752, 0, 0, 458753, 0, 1, 458754, 0, 1, 458755, 0, 1, 458756, 0, 1, 458757, 0, 1, 458758, 0, 1, 458759, 0, 1, 458760, 0, 0, 458761, 0, 0, 458762, 0, 1, 458763, 0, 0, 458764, 0, 1, 458765, 0, 1, 458766, 0, 1, 458767, 0, 1, 458768, 0, 1, 458769, 0, 1, 458770, 0, 0, 458771, 0, 0, 524288, 0, 0, 524289, 0, 1, 524290, 0, 1, 524291, 0, 0, 524292, 0, 1, 524293, 0, 1, 524294, 0, 1, 524295, 0, 1, 524296, 0, 1, 524297, 0, 1, 524298, 0, 1, 524299, 0, 1, 524300, 0, 1, 524301, 0, 1, 524302, 0, 1, 524303, 0, 1, 524304, 0, 1, 524305, 0, 1, 524306, 0, 1, 524307, 0, 1, 589824, 0, 1, 589825, 0, 1, 589826, 0, 1, 589827, 0, 0, 589828, 0, 0, 589829, 0, 1, 589830, 0, 0, 589831, 0, 1, 589832, 0, 1, 589833, 0, 1, 589834, 0, 1, 589835, 0, 1, 589836, 0, 1, 589837, 0, 1, 589838, 0, 1, 589839, 0, 1, 589840, 0, 1, 589841, 0, 1, 589842, 0, 1, 589843, 0, 1, 655360, 0, 1, 655361, 0, 0, 655362, 0, 1, 655363, 0, 1, 655364, 0, 1, 655365, 0, 1, 655366, 0, 1, 655367, 0, 1, 655368, 0, 1, 655369, 0, 1, 655370, 0, 0, 655371, 0, 0, 655372, 0, 1, 655373, 0, 0, 655374, 0, 1, 655375, 0, 1, 655376, 0, 1, 655377, 0, 1, 655378, 0, 1, 655379, 0, 1, 720896, 0, 1, 720897, 0, 0, 720898, 0, 1, 720899, 0, 1, 720900, 0, 1, 720901, 0, 0, 720902, 0, 1, 720903, 0, 1, 720904, 0, 1, 720905, 0, 1, 720906, 0, 1, 720907, 0, 1, 720908, 0, 1, 720909, 0, 0, 720910, 0, 1, 720911, 0, 1, 720912, 0, 1, 720913, 0, 1, 720914, 0, 0, 720915, 0, 1 )

[node name="GroundTileMap" type="TileMap" parent="ViewportContainer" index="1"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -65519, 2, 7, -65518, 2, 196612, -65517, 2, 196612, -65516, 2, 8, 3, 2, 65541, 17, 2, 131076, 18, 2, 131078, 19, 2, 131078, 20, 2, 131077, 65538, 2, 7, 65539, 2, 262145, 65540, 2, 5, 65546, 4, 7, 65547, 4, 196612, 65548, 4, 8, 65553, 2, 131076, 65554, 2, 131078, 65555, 2, 131078, 65556, 2, 131077, 131074, 2, 65543, 131075, 2, 65544, 131082, 4, 131076, 131083, 4, 131078, 131084, 4, 131077, 131089, 2, 65543, 131090, 2, 196613, 131091, 2, 131074, 131092, 2, 65544, 196618, 4, 131076, 196619, 4, 131072, 196620, 4, 65544, 196627, 2, 6, 262154, 4, 65543, 262155, 4, 65544, 262162, 4, 65541, 327698, 4, 65538, 393222, 3, 7, 393223, 3, 196612, 393224, 3, 196612, 393225, 3, 8, 393227, 4, 0, 393228, 4, 2, 393229, 4, 2, 393230, 4, 3, 393231, 4, 2, 393232, 4, 2, 393233, 4, 2, 393234, 4, 4, 393235, 4, 2, 393236, 4, 5, 458758, 3, 131076, 458759, 3, 131078, 458760, 3, 131072, 458761, 3, 65544, 458762, 4, 0, 458763, 4, 65537, 458766, 4, 6, 524294, 3, 131076, 524295, 3, 131078, 524296, 3, 131077, 524297, 4, 65542, 524298, 4, 65540, 589830, 3, 131076, 589831, 3, 131078, 589832, 3, 196608, 589833, 3, 8, 589834, 4, 65538, 589843, 2, 7, 589844, 2, 8, 655366, 3, 65543, 655367, 3, 196613, 655368, 3, 196613, 655369, 3, 65544, 655370, 4, 65539, 655371, 4, 5, 655377, 2, 7, 655378, 2, 196612, 655379, 2, 196609, 655380, 2, 131077, 720904, 4, 65542, 720905, 4, 3, 720906, 4, 65537, 720912, 2, 65542, 720913, 2, 196611, 720914, 2, 131078, 720915, 2, 131078, 720916, 2, 131077, 786441, 4, 6, 786449, 2, 65543, 786450, 2, 196613, 786451, 2, 196613, 786452, 2, 65544 )

[node name="ForegroundTileMap" type="TileMap" parent="ViewportContainer" index="2"]
tile_set = ExtResource( 12 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1, 6, 7, -65536, 6, 8, 65535, 6, 131076, 0, 6, 131077, 9, 6, 0, 10, 6, 5, 18, 5, 0, 19, 5, 0, 131071, 6, 131076, 65536, 6, 196608, 65537, 6, 8, 65542, 5, 0, 65544, 6, 65542, 65545, 6, 65537, 65550, 6, 0, 65551, 6, 5, 65554, 5, 0, 196607, 6, 131076, 131072, 6, 131078, 131073, 6, 131077, 131086, 6, 6, 262143, 6, 131076, 196608, 6, 131078, 196609, 6, 131077, 196617, 5, 0, 327679, 6, 131076, 262144, 6, 131078, 262145, 6, 196608, 262146, 6, 8, 262160, 6, 65542, 262161, 6, 5, 262163, 6, 196614, 393215, 6, 131076, 327680, 6, 131078, 327681, 6, 131078, 327682, 6, 196608, 327683, 6, 262149, 327684, 6, 5, 458751, 6, 131076, 393216, 6, 131078, 393217, 6, 131078, 393218, 6, 131078, 393219, 6, 131077, 524287, 6, 131076, 458752, 6, 131078, 458753, 6, 131078, 458754, 6, 131072, 458755, 6, 65544, 458764, 6, 7, 458765, 6, 8, 458767, 6, 0, 458768, 6, 2, 458769, 6, 5, 589823, 6, 131076, 524288, 6, 131078, 524289, 6, 131072, 524290, 6, 65544, 524299, 6, 65542, 524300, 6, 327684, 524301, 6, 65544, 524303, 6, 6, 655359, 6, 131076, 589824, 6, 131078, 589825, 6, 131077, 720895, 6, 131076, 655360, 6, 131078, 655361, 6, 131077, 655362, 5, 0, 655374, 5, 0, 655379, 5, 0, 786431, 6, 327682, 720896, 6, 196613, 720897, 6, 65544, 720913, 5, 0, 851967, 6, 6 )

[node name="BuildingTileMap" type="TileMap" parent="ViewportContainer" index="3"]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 1
format = 1
tile_data = PoolIntArray( 262155, 9, 0, 327690, 0, 0, 393234, 9, 0, 524299, 9, 0 )

[node name="BarnAnimationPlayer" type="AnimationPlayer" parent="ViewportContainer" index="4"]
method_call_mode = 1
anims/Barnimation = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="WindmillAnimationPlayer" type="AnimationPlayer" parent="ViewportContainer" index="5"]
anims/Rotate = SubResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="1"]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"

[node name="CanvasLayer" type="CanvasLayer" parent="." index="2"]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer" index="0"]
margin_right = 640.0
margin_bottom = 380.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer" index="0"]
margin_right = 640.0
margin_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/VBoxContainer" index="0"]
margin_top = 16.0
margin_right = 640.0
margin_bottom = 171.0
alignment = 1

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer" index="0"]
margin_left = 171.0
margin_right = 469.0
margin_bottom = 155.0
rect_min_size = Vector2( 298, 155 )

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Control" index="0"]
margin_left = -4.0
margin_right = 612.0
margin_bottom = 331.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer" index="1"]
margin_top = 192.0
margin_right = 640.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 100
custom_constants/margin_top = 30
custom_constants/margin_left = 100
custom_constants/margin_bottom = 30

[node name="HSplitContainer" type="HSplitContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer" index="0"]
margin_left = 100.0
margin_top = 30.0
margin_right = 540.0
margin_bottom = 158.0

[node name="ButtonCol" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer/HSplitContainer" index="0"]
margin_right = 214.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40
alignment = 1

[node name="ButtonStart" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer/HSplitContainer/ButtonCol" index="0"]
margin_top = 16.0
margin_right = 214.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 28 )
custom_constants/hseparation = 0
toggle_mode = true
text = "Start"
script = ExtResource( 5 )

[node name="ButtonQuit" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer/HSplitContainer/ButtonCol" index="1"]
margin_top = 84.0
margin_right = 214.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 28 )
text = "Quit"
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer/HSplitContainer" index="1"]
margin_left = 226.0
margin_right = 440.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer/HSplitContainer/PanelContainer" index="0"]
margin_left = 6.0
margin_top = 3.0
margin_right = 208.0
margin_bottom = 16.0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer/HSplitContainer/PanelContainer" index="1"]
margin_left = 6.0
margin_top = 3.0
margin_right = 208.0
margin_bottom = 125.0
custom_constants/margin_top = 8
custom_constants/margin_bottom = 8

[node name="SoundOptionsMenu" parent="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer/HSplitContainer/PanelContainer/MarginContainer" index="0" instance=ExtResource( 6 )]
margin_top = 8.0
margin_right = 202.0
margin_bottom = 114.0

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer/HSplitContainer/ButtonCol/ButtonStart" to="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer/HSplitContainer/ButtonCol/ButtonStart" method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer/HSplitContainer/ButtonCol/ButtonQuit" to="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer/HSplitContainer/ButtonCol/ButtonQuit" method="_on_ButtonQuit_pressed"]
